force-app/main/default/objects/JobExtensionConfig__mdt/JobExtensionConfig__mdt.object-meta.xml
<CustomObject>
    <label>JobExtensionConfig</label>
    <pluralLabel>JobExtensionConfig</pluralLabel>
</CustomObject>