force-app/main/default/objects/JobExtensionConfig__mdt/fields/Allowed_Extension_Days__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Extension_Days__c</fullName>
    <description>Allowed Extension Days</description>
    <label>Allowed Extension Days</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>