force-app/main/default/objects/JobExtensionConfig__mdt/fields/Default_Extension_Days__c.field-meta.xml
<CustomField>
    <fullName>Default_Extension_Days__c</fullName>
    <description>Default Extension Days</description>
    <label>Default Extension Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>