force-app/main/default/objects/JobExtensionConfig__mdt/fields/Opco__c.field-meta.xml
<CustomField>
    <fullName>Opco__c</fullName>
    <description>Operating Company Location</description>
    <label>Opco</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>